<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App text configuration -->
    <string name="app_name">Sistem Informasi Reklame</string>
    <string name="app_info">APP INFO</string>
    <string name="menu_settings">Settings</string>
    <string name="main_menu">Main Menu</string>
    <string name="copyright">© 2015 energeek.co.id</string>

    <!-- Log in -->
    <string name="title_activity_login">Login</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>

    <!-- Map -->
    <string name="title_map">Peta Reklame</string>

    <!-- Home -->
    <string name="title_activity_home">Home</string>
    <string name="dummy_section_text">Section %1d is just a dummy section.</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_map">Map</string>
    <string name="action_logout">Log Out</string>

    <!-- Search -->
    <string name="keyword">Masukan kata kunci</string>
    <string name="title_search">Pencarian Reklame</string>
    <string name="title_search_result">Hasil Pencarian</string>

    <!-- Detail Reklame -->
    <string name="title_detail_reklame">Detail Reklame</string>

    <!-- etc -->
    <string-array name="main_menu_list">
        <item>Menu List</item>
        <item>Your Order</item>
        <item>Reservation</item>
    </string-array>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_phone">Your device does not support phone call feature</string>
    <string name="no_internet">Please, enable internet connection before using this app</string>
    <string name="category_list">Category List</string>
    <string name="search">Search menu</string>
    <string name="detail">Detail</string>
    <string name="add">Add this to my order</string>
    <string name="share_btn">Share this</string>
    <string name="share">Share</string>
    <string name="comment">Your comment</string>
    <string name="post">Post</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="login_facebook">Login to Facebook</string>
    <string name="login_twitter">Login to Twitter</string>
    <string name="select_share">Please select your share</string>
    <string name="no_name">No Name</string>
    <string name="connect_twitter">Connected to Twitter as</string>
    <string name="connect_twitter_failed">Twitter connection failed</string>
    <string name="delete_twitter_connection">Delete current Twitter connection?</string>
    <string name="post_to_twitter">Posted to Twitter</string>
    <string name="post_to_twitter_failed">Post to Twitter failed</string>
    <string name="post_limit">Post is more than 140 character</string>
    <string name="post_review">Review posted</string>
    <string name="connect_facebook_failed">Facebook connection failed</string>
    <string name="delete_facebook_connection">Delete current Facebook connection?</string>
    <string name="disconnect_facebook">Disconnecting from Facebook</string>
    <string name="disconnect_facebook_2">Disconnected from Facebook</string>
    <string name="connect_facebook">Connected to Facebook as</string>
    <string name="connect_facebook_2">Connected to Facebook</string>
    <string name="logout_facebook_failed">Facebook logout failed</string>
    <string name="post_to_facebook">Posted to Facebook</string>
    <string name="contact">Contact</string>
    <string name="callus">Call us</string>
    <string name="setting">Setting</string>
    <string name="accounts">ACCOUNT SETTING</string>
    <string name="support">SUPPORT APP</string>
    <string name="emailus">Email us</string>
    <string name="news">News</string>
    <string name="alert">unable to get content from server</string>
    <string name="number_order">Number of order: </string>
    <string name="order">Order</string>
    <string name="my_order">My Order</string>
    <string name="total_order">Total order:</string>
    <string name="clear_order">Clear all order</string>
    <string name="clear_all_order">Are you sure want to clear your all order?</string>
    <string name="clear_one_order">Are you sure want to clear this order?</string>
    <string name="db_exist_alert">Do you want to remove your previous order?</string>
    <string name="confirm">Confirm</string>
    <string name="reservation">Reservation</string>
    <string name="your_name">Your name</string>
    <string name="number_of_people">Number of people</string>
    <string name="date">Click to set date</string>
    <string name="time">Click to set time</string>
    <string name="phone_number">Phone number</string>
    <string name="order_list">Order list</string>
    <string name="send_reservation">Send reservation</string>
    <string name="form_alert">Please, complete the form first.</string>
    <string name="sending_alert">Sending data. Please wait …</string>
    <string name="ok_alert">Reservation has been successfully sent.</string>
    <string name="failed_alert">Reservation has not been sent.</string>
    <string name="no_order">No order yet.</string>
    <string name="order_alert">You have not ordered yet</string>
    <string name="add_comment">Comment(optional)</string>

    <!-- Facebook and Twitter configuration -->
    <string name="facebook_app_id">YOUR_FACEBOOK_APP_ID</string>
    <string name="twitter_consumer_key">YOUR_TWITTER_CONSUMER_KEY</string>
    <string name="twitter_secret_key">YOUR_TWITTER_SECRET_KEY</string>

    <!-- Contact configuration -->
    <string name="latitude">-6.208992</string>
    <string name="longitude">106.844775</string>
    <string name="restaurant_name">The Restaurant</string>
    <string name="address">Sudirman Street No. 12, West Jakarta 13930</string>
    <string name="phone">12344455</string>
    <string name="email">reservation@restaurant.com</string>

    <!-- News configuration -->
    <string name="feedurl">http://feeds.feedburner.com/MobileTuts?format=xml</string>
    <string name="check_order_later">Check if you want to order later</string>
    <string name="order_later">#Order later</string>
    <string name="no_order_menu">No order,</string>
    <string name="search_result">Search Result</string>
    <string name="sim_reklame">sim reklame</string>
    <string name="logo_reklame">Logo Reklame</string>
    <string name="expert_ads_management">expert advertising management</string>
    <string name="loading">loading...</string>
    <string name="title_activity_login_new">LoginNewActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="home">HOME</string>
    <string name="map">MAP</string>
    <string name="search_">SEARCH</string>
    <string name="sample_company">PT. Gentong Agung Lestari</string>
    <string name="sample_address">Pemuda, Block.-, No. 27-31</string>
    <string name="sample_reklame_code">5105583</string>
    <string name="sale_icon">sale icon</string>
    <string name="cari_reklame">Cari Reklame</string>
    <string name="sample_text_paging">1 - 10 dari 100</string>
    <string name="informasi_umum">Informasi Umum</string>
    <string name="sample_search_result">Tidak ditemukan item yang sesuai</string>

</resources>