<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".HomeActivity">
    <item android:id="@+id/map"
        android:icon="@drawable/contact"
        android:title="@string/action_map"
        android:showAsAction="ifRoom"/>
    <item android:id="@+id/search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_search"
        android:showAsAction="ifRoom"/>
    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/settings"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/action_settings"
        android:showAsAction="ifRoom" />
    <item android:id="@+id/logout"
        android:icon="@drawable/ic_action_back"
        android:title="@string/action_logout"
        android:showAsAction="ifRoom" />
</menu>
